@@ -161,6 +161,9 @@ Unreleased changes (1.0-dev)
 55. NUTCH-547 - Redirection handling: YahooSlurp's algorithm.
     (dogacan, kubes via dogacan)
 
+56. NUTCH-548 - Move URLNormalizer from Outlink to ParseOutputFormat.
+    (Emmanuel Joke via dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
